--- a/packages/create-jest/package.json
+++ b/packages/create-jest/package.json
@@ -14,6 +14,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "require": "./build/index.js",
       "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
