--- a/packages/jest-phabricator/package.json
+++ b/packages/jest-phabricator/package.json
@@ -10,6 +10,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "require": "./build/index.js",
       "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
