--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "require": "./build/index.js",
       "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
