--- a/packages/pretty-format/package.json
+++ b/packages/pretty-format/package.json
@@ -13,6 +13,8 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "require": "./build/index.js",
+      "import": "./build/index.mjs",
       "default": "./build/index.js"
     },
     "./package.json": "./package.json"
