--- a/packages/jest-create-cache-key-function/package.json
+++ b/packages/jest-create-cache-key-function/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jest/create-cache-key-function",
-  "version": "29.7.0",
+  "version": "30.0.0-alpha.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/jestjs/jest.git",
