--- a/packages/jest-each/package.json
+++ b/packages/jest-each/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jest-each",
-  "version": "29.7.0",
+  "version": "30.0.0-alpha.1",
   "description": "Parameterised tests for Jest",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
