--- a/packages/jest-get-type/package.json
+++ b/packages/jest-get-type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jest-get-type",
   "description": "A utility function to get the type of a value",
-  "version": "29.6.3",
+  "version": "30.0.0-alpha.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/jestjs/jest.git",
