--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jest/reporters",
   "description": "Jest's reporters",
-  "version": "29.7.0",
+  "version": "30.0.0-alpha.1",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "exports": {
