--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jest",
   "description": "Delightful JavaScript Testing.",
-  "version": "29.7.0",
+  "version": "30.0.0-alpha.1",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "exports": {
