--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "strip-json-comments": "^3.1.1",
     "tempy": "^1.0.0",
     "ts-node": "^10.5.0",
+    "tstyche": "^1.0.0-beta.1",
     "typescript": "^5.0.4",
     "webpack": "^5.68.0",
     "webpack-node-externals": "^3.0.0",
@@ -109,7 +110,7 @@
     "test-ci-partial:parallel": "yarn jest --color --config jest.config.ci.mjs",
     "test-leak": "yarn jest -i --detectLeaks --color jest-mock jest-diff jest-repl pretty-format",
     "test-ts": "yarn jest --config jest.config.ts.mjs",
-    "test-types": "yarn test-ts --selectProjects type-tests",
+    "test-types": "yarn tstyche && yarn test-ts --selectProjects type-tests",
     "test": "yarn lint && yarn jest",
     "typecheck": "yarn typecheck:examples && yarn typecheck:tests",
     "typecheck:examples": "tsc -p examples/angular --noEmit && tsc -p examples/expect-extend --noEmit && tsc -p examples/typescript --noEmit",
