--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-explicit-resource-management": "^7.23.9",
     "@babel/plugin-transform-modules-commonjs": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.12.1",
@@ -81,7 +82,7 @@
     "tempy": "^1.0.0",
     "ts-node": "^10.5.0",
     "tstyche": "^1.0.0-beta.9",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.68.0",
     "webpack-node-externals": "^3.0.0",
     "which": "^4.0.0"
