--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "stripInternal": true,
+    "lib": ["es2021", "ESNext.Disposable"],
 
     "strict": true,
 
