--- a/e2e/global-setup/package.json
+++ b/e2e/global-setup/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/plugin-proposal-explicit-resource-management": "^7.23.9",
     "jest-util": "*"
   }
 }
