--- a/tstyche.config.json
+++ b/tstyche.config.json
@@ -7,7 +7,8 @@
     "**/packages/jest-expect/__typetests__/*.test.ts",
     "**/packages/jest-mock/__typetests__/*.test.ts",
     "**/packages/jest-snapshot/__typetests__/*.test.ts",
+    "**/packages/jest-types/__typetests__/config.test.ts",
+    "**/packages/jest-types/__typetests__/jest.test.ts",
     "**/packages/jest-worker/__typetests__/*.test.ts"
-    "**/packages/jest-types/__typetests__/config.test.ts"
   ]
 }
