--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@lerna-lite/publish": "^3.0.0",
     "@microsoft/api-extractor": "^7.35.0",
     "@tsconfig/node16": "^16.1.0",
-    "@tsd/typescript": "^5.0.4",
     "@types/babel__core": "^7.1.14",
     "@types/babel__generator": "^7.0.0",
     "@types/babel__template": "^7.0.2",
@@ -55,7 +54,6 @@
     "jest-changed-files": "workspace:*",
     "jest-junit": "^16.0.0",
     "jest-mock": "workspace:*",
-    "jest-runner-tsd": "^6.0.0",
     "jest-serializer-ansi-escapes": "^3.0.0",
     "jest-silent-reporter": "^0.5.0",
     "jest-snapshot": "workspace:*",
@@ -80,7 +78,7 @@
     "strip-json-comments": "^3.1.1",
     "tempy": "^1.0.0",
     "ts-node": "^10.5.0",
-    "tstyche": "^1.0.0",
+    "tstyche": "^2.0.0-beta.0",
     "typescript": "^5.0.4",
     "webpack": "^5.68.0",
     "webpack-node-externals": "^3.0.0",
@@ -112,7 +110,7 @@
     "test-ci-partial:parallel": "yarn jest --color --config jest.config.ci.mjs",
     "test-leak": "yarn jest -i --detectLeaks --color jest-mock jest-diff jest-repl pretty-format",
     "test-ts": "yarn jest --config jest.config.ts.mjs",
-    "test-types": "yarn tstyche && yarn test-ts --selectProjects type-tests",
+    "test-types": "yarn tstyche",
     "test": "yarn lint && yarn jest",
     "typecheck": "yarn typecheck:examples && yarn typecheck:tests",
     "typecheck:examples": "tsc -p examples/expect-extend && tsc -p examples/typescript",
