--- a/packages/jest-snapshot-utils/tsconfig.json
+++ b/packages/jest-snapshot-utils/tsconfig.json
@@ -6,7 +6,5 @@
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__mocks__/**/*", "./**/__tests__/**/*"],
-  "references": [
-    {"path": "../jest-types"}
-  ]
+  "references": [{"path": "../jest-types"}]
 }
