--- a/packages/jest-snapshot/package.json
+++ b/packages/jest-snapshot/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-syntax-typescript": "^7.7.2",
     "@babel/types": "^7.3.3",
     "@jest/expect-utils": "workspace:*",
+    "@jest/snapshot-utils": "workspace:*",
     "@jest/transform": "workspace:*",
     "@jest/types": "workspace:*",
     "babel-preset-current-node-syntax": "^1.0.0",
@@ -36,7 +37,6 @@
     "jest-matcher-utils": "workspace:*",
     "jest-message-util": "workspace:*",
     "jest-util": "workspace:*",
-    "natural-compare": "^1.4.0",
     "pretty-format": "workspace:*",
     "semver": "^7.5.3",
     "synckit": "^0.9.0"
@@ -47,7 +47,6 @@
     "@jest/test-utils": "workspace:*",
     "@types/babel__core": "^7.1.14",
     "@types/graceful-fs": "^4.1.3",
-    "@types/natural-compare": "^1.4.0",
     "@types/prettier-v2": "npm:@types/prettier@^2.1.5",
     "@types/semver": "^7.1.0",
     "ansi-regex": "^5.0.1",
