--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -36,7 +36,6 @@
     "@jest/test-sequencer": "workspace:*",
     "@jest/types": "workspace:*",
     "babel-jest": "workspace:*",
-    "chalk": "^4.0.0",
     "ci-info": "^4.0.0",
     "deepmerge": "^4.2.2",
     "glob": "^10.3.10",
@@ -51,6 +50,7 @@
     "jest-validate": "workspace:*",
     "micromatch": "^4.0.7",
     "parse-json": "^5.2.0",
+    "picocolors": "^1.0.1",
     "pretty-format": "workspace:*",
     "slash": "^3.0.0",
     "strip-json-comments": "^3.1.1"
