--- a/packages/jest-config/package.json
+++ b/packages/jest-config/package.json
@@ -43,7 +43,6 @@
     "chalk": "^4.0.0",
     "ci-info": "^4.0.0",
     "deepmerge": "^4.2.2",
-    "glob": "^10.3.10",
     "graceful-fs": "^4.2.9",
     "jest-circus": "workspace:*",
     "jest-docblock": "workspace:*",
@@ -58,7 +57,8 @@
     "parse-json": "^5.2.0",
     "pretty-format": "workspace:*",
     "slash": "^3.0.0",
-    "strip-json-comments": "^3.1.1"
+    "strip-json-comments": "^3.1.1",
+    "tinyglobby": "^0.2.5"
   },
   "devDependencies": {
     "@types/graceful-fs": "^4.1.3",
