--- a/packages/jest-config/tsconfig.json
+++ b/packages/jest-config/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build"
+    "outDir": "build",
+    "lib": ["es2021"]
   },
   "include": ["./src/**/*"],
   "exclude": ["./**/__mocks__/**/*", "./**/__tests__/**/*"],
