--- a/packages/jest-runtime/package.json
+++ b/packages/jest-runtime/package.json
@@ -30,7 +30,6 @@
     "chalk": "^4.0.0",
     "cjs-module-lexer": "^1.0.0",
     "collect-v8-coverage": "^1.0.0",
-    "glob": "^10.3.10",
     "graceful-fs": "^4.2.9",
     "jest-haste-map": "workspace:*",
     "jest-message-util": "workspace:*",
@@ -40,7 +39,8 @@
     "jest-snapshot": "workspace:*",
     "jest-util": "workspace:*",
     "slash": "^3.0.0",
-    "strip-bom": "^4.0.0"
+    "strip-bom": "^4.0.0",
+    "tinyglobby": "^0.2.5"
   },
   "devDependencies": {
     "@jest/test-utils": "workspace:*",
