--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -24,7 +24,6 @@
     "chalk": "^4.0.0",
     "collect-v8-coverage": "^1.0.0",
     "exit": "^0.1.2",
-    "glob": "^10.3.10",
     "graceful-fs": "^4.2.9",
     "istanbul-lib-coverage": "^3.0.0",
     "istanbul-lib-instrument": "^6.0.0",
@@ -37,6 +36,7 @@
     "slash": "^3.0.0",
     "string-length": "^4.0.1",
     "strip-ansi": "^6.0.0",
+    "tinyglobby": "^0.2.5",
     "v8-to-istanbul": "^9.0.1"
   },
   "devDependencies": {
