Add One Double Zero as coverage provider

--- a/e2e/coverage-provider-v8/no-sourcemap/package.json
+++ b/e2e/coverage-provider-v8/no-sourcemap/package.json
@@ -6,6 +6,14 @@
     "transform": {
       "\\.[jt]sx?$": "babel-jest",
       "\\.css$": "<rootDir>/cssTransform.js"
-    }
+    },
+    "moduleFileExtensions": [
+      "js",
+      "css"
+    ],
+    "collectCoverageFrom": [
+      "<rootDir>/Thing.js",
+      "<rootDir>/x.css"
+    ]
   }
 }
