--- a/e2e/coverage-provider-v8/empty-sourcemap/package.json
+++ b/e2e/coverage-provider-v8/empty-sourcemap/package.json
@@ -2,6 +2,9 @@
   "name": "empty-sourcemap",
   "version": "1.0.0",
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "<rootDir>/types.ts"
+    ]
   }
 }
