--- a/packages/jest-reporters/package.json
+++ b/packages/jest-reporters/package.json
@@ -34,6 +34,7 @@
     "jest-message-util": "workspace:*",
     "jest-util": "workspace:*",
     "jest-worker": "workspace:*",
+    "one-double-zero": "1.0.0-beta.14",
     "slash": "^3.0.0",
     "string-length": "^4.0.1",
     "strip-ansi": "^6.0.0",
