chore(deps): override glob version in e2e (get rid of inflight)

--- a/e2e/coverage-transform-instrumented/package.json
+++ b/e2e/coverage-transform-instrumented/package.json
@@ -26,5 +26,8 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-plugin-istanbul": "^7.0.0"
+  },
+  "resolutions": {
+    "glob": "^11.0.1"
   }
 }
