--- a/packages/jest-validate/package.json
+++ b/packages/jest-validate/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@jest/types": "workspace:*",
     "camelcase": "^6.2.0",
-    "chalk": "^4.0.0",
     "jest-get-type": "workspace:*",
     "leven": "^3.1.0",
+    "picocolors": "^1.1.1",
     "pretty-format": "workspace:*"
   },
   "devDependencies": {
