--- a/packages/jest-util/package.json
+++ b/packages/jest-util/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@jest/types": "workspace:*",
     "@types/node": "*",
-    "chalk": "^4.0.0",
     "ci-info": "^4.0.0",
     "graceful-fs": "^4.2.9",
+    "picocolors": "^1.1.1",
     "picomatch": "^4.0.0"
   },
   "devDependencies": {
